[#57635] Update error log table when clearing search field in chrome and safari

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
@@ -30,7 +30,7 @@
             class="errorlog_filtering_wrapper"
             onsubmit="return false"
             hx-get="{% url "error-log" %}"
-            hx-trigger="keyup delay:200ms from:#search_field, change from:#show_seen"
+            hx-trigger="keyup delay:200ms from:#search_field, search from:#search_field, change from:#show_seen"
             hx-swap="outerHTML"
             hx-include="[id='dropdown_options']"
             hx-target=".error_content"
