[#57634] Add export button to UI

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
@@ -56,12 +56,15 @@
         <input type="hidden" name="order" id="order" value="{{ order }}">
  
       </form>
-
+      <div class="csv_export_wrapper">
+        <a class="button" href='{% url "export-error-log" %}'>{% trans "Export as CSV" %}</a>
+      </div>
+ 
       {% if object_list %}
         <div class="datatable-wrapper card error_content"
              role="region"
              tabindex="0"
-             aria-label="{% trans 'Error Log' %}">
+             aria-label="{% trans "Error Log" %}">
           <form id="table_checkboxes">
             <table class="datatable">
               <colgroup>
