[#57943] Only include number of errors in notification if setting is on

--- a/src/os2datascanner/projects/admin/adminapp/templates/mail/finished_scannerjob.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/mail/finished_scannerjob.html
@@ -32,43 +32,26 @@
     </style>
   </head>
   <body>
+    <p>{% blocktrans %}Hello {{ full_name }},{% endblocktrans %}</p>
     <p>
-      {% blocktrans %}
-	Hello {{ full_name }},
-      {% endblocktrans %}
-    </p>
-    <p>
-      {% blocktrans %}
-	For your information, your OS2datascanner-scan @ <strong>{{ scanner_name }}</strong> has just finished.
-      {% endblocktrans %}
+      {% blocktrans %}For your information, your OS2datascanner-scan @ <strong>{{ scanner_name }}</strong> has just finished.{% endblocktrans %}
     </p>
     <p>
       <strong>{{ total_objects }}</strong>{% trans " objects were scanned - " %} <strong>{{ object_size|filesizeformat }}</strong>
       {% trans " in total - in " %} <strong>{{ completion_time }}</strong>.
     </p>
     <p>
-      {% if usererrorlogs > 0 %}
-        {% blocktrans %}
-          <strong>{{ usererrorlogs }}</strong> errors occured during the scan.<br />
-          <a href="{{ admin_login_url }}error_log/">Click here to inpect the error logs</a>
-        {% endblocktrans %}
+      {% if settings.USERERRORLOG and usererrorlogs > 0 %}
+        {% blocktrans %}<strong>{{ usererrorlogs }}</strong> errors occured during the scan.<br /><a href="{{ admin_login_url }}error_log/">Click here to inspect the error logs</a>{% endblocktrans %}
       {% endif %}
     </p>
     <p>
-      {% blocktrans %}
-    <a href="{{ admin_login_url }}">Log into OS2datascanner with your
-	organisation account</a> for further details.
-      {% endblocktrans %}
+      {% blocktrans %}<a href="{{ admin_login_url }}">Log into OS2datascanner with your organisation account</a> for further details.{% endblocktrans %}
     </p>
     <p>
-      {% blocktrans %}
-	Kind regards,<br>
-	the OS2datascanner system
-      {% endblocktrans %}
+      {% blocktrans %}Kind regards,<br>the OS2datascanner system{% endblocktrans %}
       {% if institution %}
-        {% blocktrans %}
-	    (on behalf of {{ institution }})
-        {% endblocktrans %}
+        {% blocktrans %}(on behalf of {{ institution }}){% endblocktrans %}
       {% endif %}
     </p>
   </body>
