[#57634] Add unit tests for usererrorlog csv export

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
@@ -104,9 +104,11 @@
                         </svg>
                         <span>{% trans "Remove all" %}</span>
                       </button>
-                      <a class="button button--small button--has-icon"
+                      <a class="button button--has-icon"
                          title="{% trans "Export to CSV" %}"
-                         href='{% url "export-error-log" %}'><span class="material-icons">file_download</span></a>
+                         href='{% url "export-error-log" %}'>
+                        <span class="material-icons">file_download</span>
+                      {% trans "Export to CSV" %}</a>
                     </div>
                   </th>
                 </tr>
